--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(huffman VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(huffman huffmanCode.cpp)
+add_executable(huffman test.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
